src/components/loading/loading.component.scss
.loading-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 0;
    top: 0;
    contain: content;
    background-color: var(--white);
    z-index: 1;

    &--closed {
        animation: disappear .5s;
        animation-fill-mode: forwards;
    }
}

.loading {
    width: 112px;
    height: 112px;
    border-radius: 36px;
    animation: box-fill 1s;
    animation-delay: 4s;
    animation-fill-mode: forwards;
    position: relative;

    &__part {
        width: 10px;
        border-radius: 36px;
        background-color: transparent;
        position: absolute;
        contain: content;

        &::after {
            content: "";
            position: absolute;
            width: 10px;
            background: var(--dark-orange);
            border-radius: 36px;
            animation: part-fill 1s, part-clear 1s;
            animation-fill-mode: forwards;
        }

        &--1 {
            left: 55px;
            transform: rotate(-12deg);
            top: 19px;
            height: 86px;

            &::after {
                animation-delay: 0s, 4s;
                background: linear-gradient(322deg, var(--light-orange) 0%, var(--medium-orange) 85%);
            }
        }

        &--2 {
            left: 47px;
            transform: rotate(116deg);
            top: 72px;
            height: 40px;

            &::after {
                animation-delay: 1s, 4s;
                background: var(--light-orange);
            }
        }

        &--3 {
            left: 57px;
            transform: rotate(228deg);
            top: 25px;
            height: 74px;

            &::after {
                animation-delay: 2s, 4s;
                background: linear-gradient(210deg, var(--light-orange) 0%, var(--medium-orange) 85%);
            }
        }

        &--4 {
            left: 52px;
            transform: rotate(114deg);
            height: 72px;
            top: -9px;

            &::after {
                animation-delay: 3s, 4s;
                background: var(--medium-orange);
            }
        }
    }
}

@keyframes disappear {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
        pointer-events: none;
    }
}

@keyframes part-fill {
    from {
        height: 0;
    }

    to {
        height: 100%;
    }
}

@keyframes part-clear {
    from {
        background: transparent;
    }

    to {
        background: var(--white);
    }
}

@keyframes box-fill {
    from {
        background: transparent;
        opacity: 0;
        transition: opacity 1s ease-in;
    }

    to {
        background: linear-gradient(322deg, var(--dark-orange) 0%, var(--medium-orange) 85%);
        opacity: 1;
    }
}

